Working on the Features section

--- a/style.css
+++ b/style.css
@@ -138,3 +138,85 @@ a {
         margin-top: 120px;
     }
 }
+
+.btn {
+    padding: 0 20px;
+    height: 40px;
+    font-size: 0.75em;
+    font-weight: 700;
+    text-transform: uppercase;
+    border: 0;
+    border-radius: 15px;
+    background: transparent;
+    cursor: pointer;
+}
+
+.container {
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.grid {
+    display: flex;
+}
+
+#features {
+    margin-top: 30px;
+}
+
+#features .icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 125px;
+    width: 20vw;
+    color: maroon;
+
+}
+
+#features .desc {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    height: 125px;
+    width: 80vw;
+    padding: 5px;
+
+}
+
+/* whenever screen size gets smaller than 550px implement these properties */
+@media (max-width: 550px) {
+    #features .icon {
+        display: none;
+    }
+
+    #features .desc {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        text-align: center;
+        padding: 0px 20px;
+        height: 150px;
+    }
+}
+
+@media (max-width: 650px) {
+    #features {
+        margin-top: 0;
+    }
+
+    #features .desc {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        width: 100%;
+        text-align: left;
+        padding: 0;
+        height: 150px;
+    }
+}
