how it works section with the iFrame

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Lato', sans-serif;
-    background-color: rgb(206, 205, 192);
+    background-color: rgb(255, 255, 255);
     color: #333333;
 }
 
@@ -171,7 +171,7 @@ a {
     align-items: center;
     height: 125px;
     width: 20vw;
-    color: maroon;
+    color: #067655;
 
 }
 
@@ -204,4 +204,15 @@ a {
     #features {
         margin-top: 0;
     }
+}
+
+#how-it-works {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+#how-it-works>iframe {
+    max-width: 560px;
+    width: 100%;
 }
