--- a/style.css
+++ b/style.css
@@ -216,3 +216,72 @@ a {
     max-width: 560px;
     width: 100%;
 }
+
+#pricing {
+    margin-top: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.product {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: calc(100% / 3);
+    margin: 10px;
+    border: 0;
+    border-radius: 15px;
+    box-shadow: 5px 10px 10px #868181;
+}
+
+.product>.level {
+    background: #067655;
+    color: white;
+    padding: 15px 0px;
+    width: 100%;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.product>h2 {
+    margin-top: 15px;
+}
+
+.product>ol {
+    margin: 15px 0px;
+}
+
+.product>ol>li {
+    padding: 5px 0;
+}
+
+
+.product>button {
+    border: 0;
+    margin: 15px 0;
+    background-color: rgb(233, 165, 55);
+}
+
+.product>button:hover {
+    background-color: rgb(236, 199, 77);
+    transition: background-color 1s;
+}
+
+@media (max-width: 800px) {
+    #pricing {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .product {
+        max-width: 300px;
+        width: 100%;
+        margin: 0 auto;
+        margin-bottom: 10px;
+        margin-top: 10px;
+    }
+}
