--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ li {
 a {
     text-decoration: none;
     cursor: pointer;
+    color: black;
 }
 
 @media(max-width: 600px) {
@@ -284,4 +285,29 @@ a {
         margin-bottom: 10px;
         margin-top: 10px;
     }
+}
+
+footer {
+    margin-top: 30px;
+    background-color: #ddd;
+    padding: 20px;
+    width: 100%;
+}
+
+footer>ul {
+    display: flex;
+    justify-content: flex-end;
+
+}
+
+footer>ul>li {
+    padding: 0px 10px;
+}
+
+footer>span {
+    margin: 10px 0;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 0.9em;
+    color: #444;
 }
