--- a/style.css
+++ b/style.css
@@ -1,313 +1,336 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Lato', sans-serif;
-    background-color: rgb(255, 255, 255);
-    color: #333333;
+  font-family: "Lato", sans-serif;
+  background-color: rgb(255, 255, 255);
+  color: #333333;
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
 
 .logo {
-    width: 60vw;
+  width: 60vw;
 }
 
 #page-wrapper {
-    position: relative;
+  position: relative;
 }
 
 header {
-    position: fixed;
-    top: 0;
-    min-height: 75px;
-    padding: 0px 20px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  position: fixed;
+  top: 0;
+  min-height: 75px;
+  padding: 0px 20px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.logo>img {
-    width: 100%;
-    height: 100%;
-    max-width: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-left: 20px;
-
+.logo > img {
+  width: 100%;
+  height: 100%;
+  max-width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-left: 20px;
+  margin-top: 10px;
 }
 
-nav>ul {
-    width: 35vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+nav > ul {
+  width: 35vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 a {
-    text-decoration: none;
-    cursor: pointer;
-    color: black;
+  text-decoration: none;
+  cursor: pointer;
+  color: black;
 }
 
-@media(max-width: 600px) {
-    header {
-        flex-wrap: wrap;
-    }
+@media (max-width: 600px) {
+  header {
+    flex-wrap: wrap;
+  }
 }
 
-@media(max-width: 650px) {
-    .logo {
-        width: 100%;
-        margin-top: 15px;
-        position: relative;
-    }
+@media (max-width: 650px) {
+  .logo {
+    width: 100%;
+    margin-top: 15px;
+    position: relative;
+  }
 
-    .logo>img {
-        margin: 0 auto;
-    }
+  .logo > img {
+    margin: 0 auto;
+  }
 
-    nav {
-        margin-top: 10px;
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        text-align: center;
-        padding: 0px 50px;
-    }
+  nav {
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 0px 50px;
+  }
 
-    nav>ul {
-        padding-bottom: 5px;
-        flex-direction: column;
-
-    }
+  nav > ul {
+    padding-bottom: 5px;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  nav > ul > li {
+    padding: 5px 0px;
+  }
 }
 
 #hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 100px;
+  height: 200px;
+}
+
+#hero > h2 {
+  word-wrap: break-word;
+  margin-bottom: 20px;
+}
+
+#hero input[type="email"] {
+  max-width: 275px;
+  width: 100%;
+  padding: 5px;
+  border: 2px solid black;
+  border-radius: 20px;
+}
+
+#hero input[type="submit"] {
+  max-width: 120px;
+  width: 100%;
+  height: 30px;
+  margin: 15px 0;
+  border: 0;
+  border-radius: 20px;
+  background-color: rgb(233, 165, 55);
+}
+
+#hero input[type="submit"]:hover {
+  background-color: rgb(221, 176, 27);
+  transition: background-color 1s;
+}
+
+@media (max-width: 650px) {
+  #hero {
+    margin-top: 220px;
+    text-align: center;
+    padding: 0 20px;
+  }
+  #form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-top: 50px;
-    height: 200px;
-}
-
-#hero>h2 {
-    word-wrap: break-word;
-    margin-bottom: 20px;
-
-}
-
-#hero input[type="email"] {
-    max-width: 275px;
-    width: 100%;
-    padding: 5px;
-    border: 0;
-    border-radius: 20px;
-}
-
-#hero input[type="submit"] {
-    max-width: 120px;
-    width: 100%;
-    height: 30px;
-    margin: 15px 0;
-    border: 0;
-    border-radius: 20px;
-    background-color: rgb(233, 165, 55);
-}
-
-#hero input[type="submit"]:hover {
-    background-color: rgb(221, 176, 27);
-    transition: background-color 1s;
-}
-
-@media (max-width: 650px) {
-    #hero {
-        margin-top: 120px;
-    }
+  }
 }
 
 .btn {
-    padding: 0 20px;
-    height: 40px;
-    font-size: 0.75em;
-    font-weight: 700;
-    text-transform: uppercase;
-    border: 0;
-    border-radius: 15px;
-    background: transparent;
-    cursor: pointer;
+  padding: 0 20px;
+  height: 40px;
+  font-size: 0.75em;
+  font-weight: 700;
+  text-transform: uppercase;
+  border: 0;
+  border-radius: 15px;
+  background: transparent;
+  cursor: pointer;
 }
 
 .container {
-    max-width: 1000px;
-    width: 100%;
-    margin: 0 auto;
+  max-width: 1000px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .grid {
-    display: flex;
+  display: flex;
 }
 
 #features {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 
 #features .icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 125px;
-    width: 20vw;
-    color: #067655;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 125px;
+  width: 20vw;
+  color: #067655;
 }
 
 #features .desc {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    height: 125px;
-    width: 80vw;
-    padding: 5px;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  height: 125px;
+  width: 80vw;
+  padding: 5px;
 }
 
 /* whenever screen size gets smaller than 550px implement these properties */
 @media (max-width: 550px) {
-    #features .icon {
-        display: none;
-    }
+  #features .icon {
+    display: none;
+  }
 
-    #features .desc {
-        width: 100%;
-        text-align: center;
-        padding: 0px 20px;
-        height: 150px;
-    }
+  #features .desc {
+    width: 100%;
+    text-align: center;
+    padding: 0px 20px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 40px auto;
+  }
 }
 
 @media (max-width: 650px) {
-    #features {
-        margin-top: 0;
-    }
+  #features {
+    margin-top: 0;
+  }
 }
 
 #how-it-works {
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
 }
 
-#how-it-works>iframe {
-    max-width: 560px;
-    width: 100%;
+#how-it-works > iframe {
+  max-width: 560px;
+  width: 100%;
 }
 
 #pricing {
-    margin-top: 60px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  margin-top: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .product {
-    display: flex;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: calc(100% / 3);
+  margin: 10px;
+  border: 0;
+  border-radius: 15px;
+  box-shadow: 5px 10px 10px #868181;
+}
+
+.product > .level {
+  background: #067655;
+  color: white;
+  padding: 15px 0px;
+  width: 100%;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.product > h2 {
+  margin-top: 15px;
+}
+
+.product > ol {
+  margin: 15px 0px;
+}
+
+.product > ol > li {
+  padding: 5px 0;
+}
+
+.product > button {
+  border: 0;
+  margin: 15px 0;
+  background-color: rgb(233, 165, 55);
+}
+
+.product > button:hover {
+  background-color: rgb(236, 199, 77);
+  transition: background-color 1s;
+}
+
+@media (max-width: 800px) {
+  #pricing {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .product {
+    max-width: 300px;
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+}
+
+footer {
+  margin-top: 30px;
+  background-color: #ddd;
+  padding: 20px;
+  width: 100%;
+}
+
+footer > ul {
+  display: flex;
+  justify-content: flex-end;
+}
+
+footer > ul > li {
+  padding: 0px 10px;
+}
+
+footer > span {
+  margin: 10px 0;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 0.9em;
+  color: #444;
+}
+@media (max-width: 650px) {
+  footer > * {
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: calc(100% / 3);
-    margin: 10px;
-    border: 0;
-    border-radius: 15px;
-    box-shadow: 5px 10px 10px #868181;
-}
-
-.product>.level {
-    background: #067655;
-    color: white;
-    padding: 15px 0px;
-    width: 100%;
-    text-transform: uppercase;
-    font-weight: 700;
-}
-
-.product>h2 {
-    margin-top: 15px;
-}
-
-.product>ol {
-    margin: 15px 0px;
-}
-
-.product>ol>li {
-    padding: 5px 0;
-}
-
-
-.product>button {
-    border: 0;
-    margin: 15px 0;
-    background-color: rgb(233, 165, 55);
-}
-
-.product>button:hover {
-    background-color: rgb(236, 199, 77);
-    transition: background-color 1s;
-}
-
-@media (max-width: 800px) {
-    #pricing {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .product {
-        max-width: 300px;
-        width: 100%;
-        margin: 0 auto;
-        margin-bottom: 10px;
-        margin-top: 10px;
-    }
-}
-
-footer {
-    margin-top: 30px;
-    background-color: #ddd;
-    padding: 20px;
-    width: 100%;
-}
-
-footer>ul {
-    display: flex;
-    justify-content: flex-end;
-
-}
-
-footer>ul>li {
-    padding: 0px 10px;
-}
-
-footer>span {
-    margin: 10px 0;
-    display: flex;
-    justify-content: flex-end;
-    font-size: 0.9em;
-    color: #444;
+  }
+  footer > ul > li {
+    padding-bottom: 10px;
+  }
 }
